--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,6 +10,7 @@ export(add_roadSystem)
 export(assign_barriers_to_clusters)
 export(assign_measurements_to_clusters)
 export(assign_traffic_volume_source)
+export(balance_predictions)
 export(build_adjacency_matrix)
 export(build_flow_constraints)
 export(build_measurement_matrix)
