add dependencies and update doc

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,6 +3,7 @@
 S3method(print,inla_traffic_model)
 export(add_county)
 export(add_geometries)
+export(add_heavy_aadt)
 export(add_logLastYear)
 export(add_logLength)
 export(add_municipality)
@@ -12,7 +13,7 @@ export(assign_measurements_to_clusters)
 export(assign_traffic_volume_source)
 export(balance_predictions)
 export(build_adjacency_matrix)
-export(build_flow_constraints)
+export(build_incidence_matrix)
 export(build_measurement_matrix)
 export(calculate_bus_aadt)
 export(extract_smallest_element)
@@ -25,6 +26,8 @@ export(identify_unbalanceable_nodes)
 export(join_bus_to_traffic)
 export(merge_small_clusters)
 export(nvdb_objects)
+export(plot_prediction_cv)
+export(plot_prediction_relative_uncertainty_histogram)
 export(plot_prediction_uncertainty)
 export(plot_predictions_against_last_year)
 export(plot_traffic_links_map)
@@ -65,5 +68,6 @@ importFrom(leaflet,addTiles)
 importFrom(leaflet,colorFactor)
 importFrom(leaflet,colorNumeric)
 importFrom(leaflet,leaflet)
+importFrom(rlang,.data)
 importFrom(scales,pseudo_log_trans)
 importFrom(sf,st_transform)
