--- a/.Rbuildignore
+++ b/.Rbuildignore
@@ -1,4 +1,13 @@
 ^.*\.Rproj$
 ^\.Rproj\.user$
 ^data-raw$
+^_pkgdown\.yml$
+^docs$
+^pkgdown$
+^\.github$
+^README\.Rmd$
 ^LICENSE\.md$
+^cran-comments\.md$
+^\.travis\.yml$
+^codecov\.yml$
+^\.covrignore$
