--- a/NAMESPACE
+++ b/NAMESPACE
@@ -15,12 +15,22 @@ export(balance_predictions)
 export(build_adjacency_matrix)
 export(build_incidence_matrix)
 export(build_measurement_matrix)
+export(calculate_approval_by_segment)
+export(calculate_approval_metrics)
 export(calculate_bus_aadt)
+export(calculate_eale_threshold)
+export(calculate_preapproval_metrics)
+export(calculate_sd_of_sum)
+export(check_autoapproval)
+export(convert_ratio_to_count)
+export(estimate_ratio_uncertainty)
+export(estimate_standard_error)
 export(extract_smallest_element)
 export(fill_missing_values)
 export(find_neighboring_clusters)
 export(fit_inla_model)
 export(flatten_df)
+export(get_approval_per_group)
 export(get_best_traffic_volume)
 export(identify_unbalanceable_nodes)
 export(join_bus_to_traffic)
@@ -32,6 +42,8 @@ export(plot_prediction_uncertainty)
 export(plot_predictions_against_last_year)
 export(plot_traffic_links_map)
 export(preprocess_traffic_links)
+export(print_approval_summary)
+export(print_preapproval_summary)
 export(process_list_columns)
 export(process_traffic_volume)
 export(remove_list_columns)
@@ -68,6 +80,8 @@ importFrom(leaflet,addTiles)
 importFrom(leaflet,colorFactor)
 importFrom(leaflet,colorNumeric)
 importFrom(leaflet,leaflet)
+importFrom(rlang,":=")
 importFrom(rlang,.data)
 importFrom(scales,pseudo_log_trans)
 importFrom(sf,st_transform)
+importFrom(tibble,tibble)
