--- a/NAMESPACE
+++ b/NAMESPACE
@@ -41,12 +41,14 @@ export(plot_prediction_relative_uncertainty_histogram)
 export(plot_prediction_uncertainty)
 export(plot_predictions_against_last_year)
 export(plot_traffic_links_map)
+export(plot_traffic_links_simple_map)
 export(preprocess_traffic_links)
 export(print_approval_summary)
 export(print_preapproval_summary)
 export(process_list_columns)
 export(process_traffic_volume)
 export(remove_list_columns)
+export(remove_negative_aadt)
 export(remove_redundant_columns)
 export(round_and_check_aadt)
 export(safely_extract_first_element)
